<resources>
    <string name="app_name">WatToIt</string>
    <string name="action_settings">Settings</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="choose_your_login">Choose your login</string>
    <string name="enter_your_email">Enter your email</string>
    <string name="choose_your_password">Choose your password</string>
    <string name="repeat_your_password">Repeat your password</string>
    <string name="logo">Logo</string>
    <string name="enter_your_login">Enter your login</string>
    <string name="enter_your_password">Enter your password</string>
    <string name="enter_request">Enter your request</string>
    <string name="search_button_text">Search</string>
    <string name="recipe_image">Recipe image</string>
    <string name="title_activity_front">FrontActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Name and Surname</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="menu_search">Search Recipe</string>
    <string name="menu_fav">Favourite</string>
    <string name="menu_recipe">My Recipes</string>
    <string name="menu_setting">Setting</string>
    <string name="menu_diet">Diet</string>
    <string name="menu_log_out">Log out</string>
    <string name="home_second">Home Second</string>
    <string name="title_activity_recipe_view">RecipeViewActivity</string>
    <string name="no_diet_labels_placeholder">No diet labels assigned</string>
    <string name="no_ingredients_placeholder">No ingredients required for this recipe</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="preferences_text">We care about your dietary preferences, so we kindly ask you to choose your one preferred diet. We will take that into account when searching for the recipes</string>
    <string name="balanced">Balanced</string>
    <string name="high_fiber">High-Fiber</string>
    <string name="high_protein">High-Protein</string>
    <string name="low_carb">Low-Carb</string>
    <string name="low_fat">Low-Fat</string>
    <string name="low_sodium">Low-Sodium</string>
    <string name="save">Save</string>
</resources>
