<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_search"
            android:icon="@drawable/ic_search_black_24dp"
            android:title="@string/menu_search" />
        <item
            android:id="@+id/nav_fav"
            android:icon="@drawable/ic_favorite_black_24dp"
            android:title="@string/menu_fav" />

        <item
            android:id="@+id/nav_diet"
            android:icon="@drawable/ic_whatshot_black_24dp"
            android:title="@string/menu_diet" />
        <item
            android:id="@+id/nav_log_out"
            android:icon="@drawable/ic_exit_to_app_black_24dp"
            android:title="@string/menu_log_out" />
    </group>
</menu>
