<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".login.PreferencesFragment">

    <TextView
        android:id="@+id/preferencesTipText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:paddingLeft="32dp"
        android:paddingRight="32dp"
        android:text="@string/preferences_text"
        android:textAlignment="center"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iconPreferences" />

    <ImageView
        android:id="@+id/iconPreferences"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginTop="16dp"
        android:src="@drawable/preferences"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="38dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/preferencesTipText">

        <RadioButton
            android:id="@+id/balancedRadio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/balanced" />

        <RadioButton
            android:id="@+id/hfRadio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/high_fiber" />

        <RadioButton
            android:id="@+id/hpRadio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/high_protein" />

        <RadioButton
            android:id="@+id/lcRadio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/low_carb" />

        <RadioButton
            android:id="@+id/lfRadio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/low_fat" />

        <RadioButton
            android:id="@+id/lsRadio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/low_sodium" />

        <RadioButton
            android:id="@+id/noneRadio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/none" />
    </RadioGroup>

    <Button
        android:id="@+id/savePreferencesButton"
        style="@style/ButtonStyle"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/save"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup" />

</androidx.constraintlayout.widget.ConstraintLayout>